@@ -85,7 +85,7 @@ public:
   static const char *filter_label;
   static Fl_File_Sort_F *sort;
 };
-extern FL_EXPORT char *fl_dir_chooser(const char *message,const char *fname,int relative=0);
-extern FL_EXPORT char *fl_file_chooser(const char *message,const char *pat,const char *fname,int relative=0);
-extern FL_EXPORT void fl_file_chooser_callback(void (*cb)(const char*));
+FL_EXPORT char *fl_dir_chooser(const char *message,const char *fname,int relative=0);
+FL_EXPORT char *fl_file_chooser(const char *message,const char *pat,const char *fname,int relative=0);
+FL_EXPORT void fl_file_chooser_callback(void (*cb)(const char*));
 #endif
