@@ -11,7 +11,8 @@ class Fl_File_Chooser {open
     Fl_Window window {
       label {Pick a File}
       callback {fileName->value(directory_);
-window->hide();} open
+fileList->deselect();
+window->hide();} open selected
       private xywh {99 225 375 325} resizable
       code0 {if (title) window->label(title);}
       code1 {\#include <stdio.h>}
@@ -76,13 +77,13 @@ window->hide();}
       Fl_Button {} {
         label Cancel
         callback {fileName->value(directory_);
+fileList->deselect();
 window->hide();}
         private xywh {285 290 80 25}
         code0 {o->label(fl_cancel);}
       }
     }
-    code {window->size_range(375, 315, 375);
-fileList->filter(p);
+    code {fileList->filter(p);
 type(t);
 value(d);
 callback_ = 0;
@@ -215,7 +216,7 @@ else
   }
   decl {static const char *filter_label;} {public
   }
-  decl {static Fl_File_Sort_F *sort;} {selected public
+  decl {static Fl_File_Sort_F *sort;} {public
   }
 } 
 
